@@ -90,7 +90,11 @@ module Cucumber
       # as you want (typically from ruby scripts under <tt>support/hooks.rb</tt>).
       def AfterConfiguration(&proc)
         RbDsl.register_rb_hook('after_configuration', [], proc)
-      end      
+      end
+
+      def Options(&proc)
+        RbDsl.register_rb_hook('update_options', [], proc)
+      end
 
       # Registers a new Ruby StepDefinition. This method is aliased
       # to <tt>Given</tt>, <tt>When</tt> and <tt>Then</tt>, and
